Fix margin-bottom for the last note banner to improve spacing

--- a/messageDisplay/note-banner.css
+++ b/messageDisplay/note-banner.css
@@ -28,6 +28,10 @@
   margin-bottom: 2px;
 }
 
+.mail-note-banner:last-child {
+  margin-bottom: 10px;
+}
+
 .mail-note-icon {
   font-size: 16px;
   flex-shrink: 0;
